@@ -18,3 +18,4 @@
 * [#35](https://github.com/upfrontsystems/izinto-angular/issues/35) add decimals for rounding chart labels
 * [#38](https://github.com/upfrontsystems/izinto-angular/issues/38) remove group by from chart
 * [#57](https://github.com/upfrontsystems/izinto-angular/issues/38) can't update user role
+( [#63](https://github.com/upfrontsystems/izinto-angular/issues/38) optionally include dashboards in collections list
